--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 # ==============================
 
 # database connection URL
-spring.datasource.url = jdbc:mysql://localhost:3306/dagchat
+spring.datasource.url = jdbc:mysql://localhost:3306/dagchat?serverTimezone=UTC
 
 # username
 spring.datasource.username = root
