--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.datasource.url = jdbc:mysql://localhost:3306/dagchat?serverTimezone=UTC
 spring.datasource.username = root
 
 # password
-spring.datasource.password = password
+spring.datasource.password = rootPassword
 
 
 # ==============================
